- 
    
Bug
 - 
    Resolution: Fixed
 - 
    
P2: Important
 - 
    5.12.0, 5.12.3
 - 
    None
 
- 
        
 - 
        036b6159e (dev), f726bac94 (6.5), deb0628a1 (6.4), 7437ab913 (tqtc/lts-6.2)
 
There is no problem when rotating Flipable to 30° angle, but when I change the rotation angle to 45°, the content that Flipable draws becomes the item on the back.
I provided a simple qml code, the front Rectangle item color is "red", the back Rectangle item color is "yellow".
using command: "qmlscne --no-scaling test.qml", waiting for the application to quit, you will get two images "test_qml_30.png" and "test_qml_45.png" in current folder.
- relates to
 - 
                    
QTBUG-105088 Can't rotate a QImage to 45 degrees by Y Axis
-         
 - Closed
 
 -