tests/auto/quick/qquickflipable/tst_qquickflipable.cpp
@@ -27,6 +27,9 @@ private slots:
     void QTBUG_9161_crash();
     void QTBUG_8474_qgv_abort();
 
+    void flipRotationAngle_data();
+    void flipRotationAngle();
+
 private:
     QQmlEngine engine;
 };
@@ -110,6 +113,31 @@ void tst_qquickflipable::QTBUG_8474_qgv_abort()
     QVERIFY(root != nullptr);
     window->show();
     delete window;
+}
+
+void tst_qquickflipable::flipRotationAngle_data()
+{
+    QTest::addColumn<int>("angle");
+    QTest::addColumn<QQuickFlipable::Side>("side");
+
+    QTest::newRow("89") << 89 << QQuickFlipable::Front;
+    QTest::newRow("91") << 91 << QQuickFlipable::Back;
+    QTest::newRow("-89") << -89 << QQuickFlipable::Front;
+    QTest::newRow("-91") << -91 << QQuickFlipable::Back;
+}
+
+void tst_qquickflipable::flipRotationAngle() // QTBUG-75954
+{
+    QFETCH(int, angle);
+    QFETCH(QQuickFlipable::Side, side);
+
+    QQmlEngine engine;
+    QQmlComponent c(&engine, testFileUrl("flip-y-axis-flipable.qml"));
+    QQuickFlipable *obj = qobject_cast<QQuickFlipable*>(c.create());
+    QVERIFY(obj != nullptr);
+    obj->setProperty("angle", angle);
+    QCOMPARE(obj->side(), side);
+    delete obj;
 }
 
 QTEST_MAIN(tst_qquickflipable)
